# HULK

./: .hulk.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  environment.yml  install_hulk.sh  multiqc_config.yaml  pyproject.toml
app/: __init__.py  align.py  cache_manager.py  cli.py  core.py  entities.py  logo.py  orchestrator.py  post_processing.R  post_processing.py  prefetcher.py  processor.py  qc.py  seidr.py  sra.py  trim.py  tx2gene.py  utils.py
scripts/: hulk  uninstall_hulk.sh
