[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hulk"
version = "1.0.0"                      # â† bump me to change `hulk -V`
description = "HULK: RNA-seq pipeline CLI"
readme = "README.md"
authors = [{ name = "Manuel Paiva de Almeida" }]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24"
]

# Entry point: installs the `hulk` command that calls app/cli.py:main
[project.scripts]
hulk = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

# Ship the `app` package (which contains cli.py, core.py, utils.py, etc.)
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

