[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hulk"
version = "1.2.0"                      
description = "HULK: RNA-seq pipeline CLI"
readme = "README.md"
authors = [{ name = "Manuel Almeida" },{ name = "Pedro Barros" }]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "click>=8.1"
]

# Entry point: installs the `hulk` command that calls app/cli.py:main
[project.scripts]
hulk = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

# Ship the `app` package (which contains cli.py, core.py, utils.py, etc.)
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

